Hello
Put changelog in plain text please
Make sure to clear this after each release

Put changelog here:
-----------------
- Updated included Jankson to 1.2.3